--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: minima
 title: David Menezes Professional Portfolio
-author: David M.
-description: Hello world.
+author: David M. Menezes
+description: My personal webpage!
+
 
